# ehacks-2024

./: LICENSE  README.md  pyproject.toml  requirements.txt
resources/: chinook-license.md
src/: chat.py  rag.py  sql.py
